modified:   index.html 	modified:   script.js

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div class="content-container top">    
                         <div class="highlights-content">
                             <p class="highlight-header">Wind Status</p>
-                            <p class="number-value" id="wind-status">7<span class="number-unit">mph</span></p>
+                            <p class="number-value" id="wind-speed">7<span class="number-unit">mph</span></p>
                         <div class="highlight-icon"> 
                             <p><span class="fa-solid fa-caret-down"></span> wsw</p> 
                         </div>
@@ -122,7 +122,7 @@
                                 <label for="humidity-value"><span>0</span> <span>50</span> <span>100</span></span></label>
                             </div>
                         <div>
-                            <meter id="humidity-value" min= "0" max="100" value="74"></meter>
+                            <meter id="myMeter" min= "0" max="100" value="74"></meter>
                         </div>
                         <div class="humidity-percent">
                             <label for="humidity-percent"><span>%</span></la>
