modified:   index.html 	modified:   script.js 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
 
             <div class="temperature">
-                <p id="temp">0<span class="temp-symbol">°C</span></p>
+                <p id="temp">0</p><span class="temp-unit">°C</span>
             </div>
 
             <div class="temp-description">
