--- a/index.html
+++ b/index.html
@@ -23,16 +23,18 @@
                         <div class="cloud-2"><img src="/images/cloudy.png" alt="little-cloud"></div>
                     </div>
 
-                    <div class="cloud-3"><img src="/images/IsoRainSwrsDay.png" alt="cloud-image"></div>                    
+                    <div class="weather-icon">
+                        <img src="/images/IsoRainSwrsDay.png" alt="cloud-image" id="icon">
+                    </div>                    
                     
                     <div class="bottom-section">
                         <div class="cloud-4"><img src="/images/cloudy.png" alt="little-cloud"></div>
-                        <div class="cloud-5"><img src="/images/cloudy.png" alt="little-cloud"></div>
+                        <div class="cloud-5"><img src="/images/cloudy.png" °alt="little-cloud"></div>
                     </div>
             </div>
 
             <div class="temperature">
-                <p id="temp">0</p><span class="temp-unit">°C</span>
+                <p id="temp">0</p><span class="temp-symbol">°C</span>
             </div>
 
             <div class="temp-description">
@@ -108,7 +110,9 @@
                     <div class="content-container top">    
                         <div class="highlights-content">
                             <p class="highlight-header">Wind Status</p>
-                            <p class="number-value" id="wind-speed">7<span class="number-unit">mph</span></p>
+                        <div class="value-container">
+                            <p class="number-value" id="wind-speed">7</p><span class="number-unit">mph</span>
+                        </div>
                         <div class="highlight-icon"> 
                             <p><span class="fa-solid fa-caret-down"></span> wsw</p> 
                         </div>
@@ -116,13 +120,15 @@
 
                         <div class="highlights-content">
                             <p class="highlight-header">Humidity</p>
-                            <p class="number-value" id="humidity">74<span class="number-unit">%</p>
+                        <div class="value-container">
+                            <p class="number-value" id="humidity">74</p><span class="number-unit">%</span>
+                        </div>
                         <div class="highlight-icon">
                             <div class="humidity-values">
                                 <label for="humidity-value"><span>0</span> <span>50</span> <span>100</span></span></label>
                             </div>
                         <div>
-                            <meter id="myMeter" min= "0" max="100" value="74"></meter>
+                            <meter class="humidity-status" min= "0" max="100" value="74"></meter>
                         </div>
                         <div class="humidity-percent">
                             <label for="humidity-percent"><span>%</span></la>
@@ -134,12 +140,16 @@
                     <div class="content-container bottom">
                         <div class="highlights-content">
                             <p class="highlight-header">Visibility</p>
-                            <p class="number-value" id="visibility">6,4<span class="number-unit"> miles</p>
+                            <div class="value-container">
+                                <p class="number-value" id="visibility">6,4</p><span class="number-unit"> miles </span>
+                            </div>
                         </div>
 
                         <div class="highlights-content">
                             <p class="highlight-header">Air Pressure</p>
-                            <p class="number-value" id="air-pressure">998<span class="number-unit">mb</p>
+                            <div class="value-container">
+                            <p class="number-value" id="air-pressure">998</p><span class="number-unit">mb</span>
+                            </div>
                         </div>
                     </div>
                 </div>
