Change to the weather cards on hover:   index.html search a bit better:   script.js modified:   style.css

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                             <span class="fa-solid fa-magnifying-glass"></span>
                             <input type="text" name="text" class="query" id="query" placeholder="search location"></input>
                             <input type="submit" name="submit" class="submit" value="Search">
-                            <ul>
-                                <li>Cities</li>
-                            </ul>
+                            <!-- <ul>
+                                <li>Cities <span class="fa-solid fa-greater-than" display="none"></span></li> 
+                            </ul>  "To be added with JS."--> 
                     </form>
                 </div>
             </div>
@@ -196,7 +196,7 @@
                             <meter class="humidity-status" min= "0" max="100" value="74"></meter>
                         </div>
                         <div class="humidity-percent">
-                            <label for="humidity-percent"><span>%</span></la>
+                            <label for="humidity-percent"><span>%</span></label>
                         </div>
                         </div>
                         </div>
