modified:   index.html 	modified:   script.js

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <form action="" method="GET" class="search" id="search">
                             <span class="fa-solid fa-magnifying-glass"></span>
                             <input type="text" name="text" class="query" id="query" placeholder="search location"></input>
-                            <input type="submit" name="submit" class="submit" value="Search">
+                            <input type="submit" name="submit" class="submit" id="submit-btn" value="Search">
                             <!-- <ul>
                                 <li>Cities <span class="fa-solid fa-greater-than" display="none"></span></li> 
                             </ul>  "To be added with JS."--> 
